src/servers/app/font/FontManager.cpp
@@ -204,7 +204,11 @@ FontManager::GetStyle(uint16 familyID, uint16 styleID) const
 	ASSERT(IsLocked());
 
 	FontKey key(familyID, styleID);
-	return fStyleHashTable.Get(key);
+	FontStyle* style = fStyleHashTable.Get(key);
+	if (style != NULL)
+		return style;
+
+	return fDelistedStyleHashTable.Get(key);
 }
 
 
@@ -214,7 +218,7 @@ FontManager::GetStyle(uint16 familyID, uint16 styleID) const
 	\param family The font's family or NULL in which case \a familyID is used
 	\param style The font's style or NULL in which case \a styleID is used
 	\param familyID will only be used if \a family is NULL (or empty)
-	\param styleID will only be used if \a style is NULL (or empty)
+	\param styleID will only be used if \a family and \a style are NULL (or empty)
 	\param face is used to specify the style if both \a style is NULL or empty
 		and styleID is 0xffff.
 
@@ -227,6 +231,11 @@ FontManager::GetStyle(const char* familyName, const char* styleName,
 	ASSERT(IsLocked());
 
 	FontFamily* family;
+
+	if (styleID != 0xffff && (familyName == NULL || !familyName[0])
+		&& (styleName == NULL || !styleName[0])) {
+		return GetStyle(familyID, styleID);
+	}
 
 	// find family
 
@@ -242,9 +251,6 @@ FontManager::GetStyle(const char* familyName, const char* styleName,
 
 	if (styleName != NULL && styleName[0])
 		return family->GetStyle(styleName);
-
-	if (styleID != 0xffff)
-		return family->GetStyleByID(styleID);
 
 	// try to get from face
 	return family->GetStyleMatchingFace(face);
@@ -283,15 +289,15 @@ FontManager::RemoveStyle(FontStyle* style)
 	if (family == NULL)
 		debugger("family is NULL!");
 
-	FontStyle* check = GetStyle(family->ID(), style->ID());
-	if (check != NULL)
-		debugger("style removed but still available!");
+	fDelistedStyleHashTable.Remove(FontKey(family->ID(), style->ID()));
+	int count = fDelistedFamilies.Get(family) - 1;
+	if (count == 0)
+		fDelistedFamilies.Remove(family);
+	else if (count > 0)
+		fDelistedFamilies.Put(family, count);
 
-	if (family->RemoveStyle(style)
-		&& family->CountStyles() == 0) {
-		fFamilies.RemoveItem(family);
+	if (family->CountStyles() == 0 && !fDelistedFamilies.ContainsKey(family))
 		delete family;
-	}
 }
 
 
@@ -351,16 +357,37 @@ FontManager::_RemoveFont(uint16 familyID, uint16 styleID)
 {
 	ASSERT(IsLocked());
 
-	return fStyleHashTable.Remove(FontKey(familyID, styleID));
+	FontKey key(familyID, styleID);
+	FontStyle* style = fStyleHashTable.Get(key);
+	if (style != NULL) {
+		fDelistedStyleHashTable.Put(key, style);
+		FontFamily* family = style->Family();
+		fDelistedFamilies.Put(family, fDelistedFamilies.Get(family) + 1);
+		if (family->RemoveStyle(style) && family->CountStyles() == 0)
+			fFamilies.RemoveItem(family);
+		fStyleHashTable.Remove(key);
+	}
+	return style;
 }
 
 
 void
 FontManager::_RemoveAllFonts()
 {
-	for (int32 i = fFamilies.CountItems(); i-- > 0;)
-		delete fFamilies.RemoveItemAt(i);
+	for (int32 i = fFamilies.CountItems(); i-- > 0;) {
+		FontFamily* family = fFamilies.RemoveItemAt(i);
+		fDelistedFamilies.Remove(family);
+		delete family;
+	}
 
+	HashMap<FontKey, FontStyle*>::Iterator it = fDelistedStyleHashTable.GetIterator();
+	while (it.HasNext()) {
+		FontFamily* family = it.Next().value->Family();
+		fDelistedFamilies.Remove(family);
+		delete family;
+	}
+
+	fDelistedFamilies.Clear();
 	fStyleHashTable.Clear();
 }
 
